bigger canvas to prevent text from clipping
annoyed how text would get cut off at the end of the menu

canvas size and menu base scale1.5x while centering root objects in css

--- a/ActionMenu/UIResources/index.css
+++ b/ActionMenu/UIResources/index.css
@@ -25,6 +25,9 @@
 #actionmenu {
     display: block;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 25%);
     height: 497px; /* due to borders */
     width: 497px;
 }
@@ -32,47 +35,49 @@
 #widget-radial {
     display: none;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 25%);
     height: 497px;
     width: 497px;
-
     background: radial-gradient(#d17f00 28%, #3a1500);
     border-radius: 50%;
     overflow: hidden;
 }
 
-#widget-radial .arc {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(#eea22cf2 28%, #765407);
-    border-radius: 50%;
-}
+    #widget-radial .arc {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: radial-gradient(#eea22cf2 28%, #765407);
+        border-radius: 50%;
+    }
 
-#widget-radial .value {
-    display: block;
-    position: absolute;
-    top: 0%;
-    left: 50%;
-    width: 100%;
-    height: 40px;
-    text-align: center;
-    color: white;
-    font-size: 30px;
-    transform: translate(-50%, -50%);
-    background-color: rgba(45, 45, 45, 0.5);
-    border-radius: 20px;
-    padding: 5px;
-}
+    #widget-radial .value {
+        display: block;
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        width: 100%;
+        height: 40px;
+        text-align: center;
+        color: white;
+        font-size: 30px;
+        transform: translate(-50%, -50%);
+        background-color: rgba(45, 45, 45, 0.5);
+        border-radius: 20px;
+        padding: 5px;
+    }
 
-#widget-radial .center, #widget-j2d .center {
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
+    #widget-radial .center, #widget-j2d .center {
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
 
 #actionmenu .sector {
     display: none;
@@ -141,10 +146,7 @@
 
 .joystick {
     border-radius: 50%;
-    background: radial-gradient(#4a3f22,
-        #4a3f22 17%, #f0ba27 20%, #534711 23%,
-        #513f0c 42%, #dac024 45%, #4f480a 47%,
-        #4a4422 57%, #ffc525 60%, #573b15 63%);
+    background: radial-gradient(#4a3f22, #4a3f22 17%, #f0ba27 20%, #534711 23%, #513f0c 42%, #dac024 45%, #4f480a 47%, #4a4422 57%, #ffc525 60%, #573b15 63%);
     opacity: 0.90;
 }
 
@@ -158,24 +160,26 @@
 #widget-j2d {
     display: none;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 25%);
     height: 497px;
     width: 497px;
-
     background: radial-gradient(#d17f00 28%, #3a1500);
     border-radius: 50%;
     overflow: hidden;
 }
 
-#widget-j2d .triangle {
-    display: block;
-    position: absolute;
-    width: 0px;
-    height: 0px;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-bottom: 20px solid #dac024;
-    transform: translate(-50%, -50%);
-}
+    #widget-j2d .triangle {
+        display: block;
+        position: absolute;
+        width: 0px;
+        height: 0px;
+        border-left: 20px solid transparent;
+        border-right: 20px solid transparent;
+        border-bottom: 20px solid #dac024;
+        transform: translate(-50%, -50%);
+    }
 
 #actionmenu .separators, #actionmenu .items { /* cohtml needs this to show anything */
     display: block;
@@ -211,8 +215,13 @@
 }
 
 @keyframes grow_item {
-    from { transform: scale(1); }
-    to { transform: scale(1.2); }
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.2);
+    }
 }
 
 .animated-item {
